welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not enough arguments for method growFlowers: (D: java.awt.Color)Unit.
Unspecified value parameter D.
	    growFlowers();
                       ^